--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   </head>
 
-  <body class="text-center">
+  <body class="text-center" style="background-color:#555">
 
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
