--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
 
   <body class="text-center" style="background-color:#222">
 
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+    <div class="text-primary d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand">Cover</h3>
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
-          </nav>
+          <h3 class="">GFYPIF</h3>
         </div>
       </header>
 
