--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 
   <body class="text-center" style="background-color:#222">
 
-    <div class="text-primary d-flex h-100 p-3 mx-auto flex-column">
-      <header class="masthead mb-auto">
-        <div class="inner">
+    <div class="d-flex h-100 p-3 mx-auto flex-column">
+      <header class=" mb-auto text-primary">
           <h3 class="">GFYPIF</h3>
-        </div>
       </header>
 
       <main role="main" class="inner cover">
