--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     <div class="d-flex h-100 p-3 mx-auto flex-column">
       <header class=" mb-auto text-primary">
-          <h3 class="">GFYPIF</h3>
+          <h1 class="">G.F.Y.P.I.F.</h1>
       </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p>
+        <div class="form-group">
+    <label for="ventTarget">Recipient</label>
+    <input type="text" class="form-control" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
+    <small id="ventTargetHelp" class="form-text text-muted">Who do you want to GFYPIF?</small>
+  </div>
       </main>
 
       <footer class="mastfoot mt-auto">
