--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <h1 class="">G.F.Y.P.I.F.</h1>
       </header>
 
-      <main role="main" class="inner cover">
+      <main role="main" class="col-lg-6 col-offset-3">
         <div class="form-group">
     <label for="ventTarget">Recipient</label>
-    <input type="text" class="form-control" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
+    <input type="text" class="form-control form-control-lg" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
     <small id="ventTargetHelp" class="form-text text-muted">Who do you want to GFYPIF?</small>
   </div>
       </main>
