--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body class="text-center" style="background-color:#222">
-
+<div class="row">
     <div class="d-flex h-100 p-3 mx-auto flex-column">
       <header class=" mb-auto text-primary">
           <h1 class="">G.F.Y.P.I.F.</h1>
@@ -34,6 +34,7 @@
           <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
         </div>
       </footer>
+    </div>
     </div>
 
 
