--- a/index.html
+++ b/index.html
@@ -1,47 +1,37 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <title>GFYPIF</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
-
-  </head>
-
-  <body class="text-center" style="background-color:#222">
-<div class="row">
-    <div class="d-flex h-100 p-3 mx-auto flex-column">
-      <header class=" mb-auto text-primary">
-          <h1 class="">G.F.Y.P.I.F.</h1>
-      </header>
-
-      <main role="main" class="col-lg-6 col-offset-3">
-        <div class="form-group">
-    <label for="ventTarget">Recipient</label>
-    <input type="text" class="form-control form-control-lg" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
-    <small id="ventTargetHelp" class="form-text text-muted">Who do you want to GFYPIF?</small>
-  </div>
-      </main>
-
-      <footer class="mastfoot mt-auto">
-        <div class="inner">
-          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        </div>
-      </footer>
-    </div>
-    </div>
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
-  </body>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="">
+      <meta name="author" content="">
+      <title>GFYPIF</title>
+      <!-- Bootstrap core CSS -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+   </head>
+   <body class="text-center" style="background-color:#222">
+      <div class="container">
+      <div class="row">
+         <div class="d-flex h-100 p-3 mx-auto flex-column">
+            <header class=" mb-auto text-primary">
+               <h1 class="">G.F.Y.P.I.F.</h1>
+            </header>
+            <main role="main" class="col-lg-6 col-offset-3">
+               <div class="form-group">
+                  <label for="ventTarget">Recipient</label>
+                  <input type="text" class="form-control form-control-lg" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
+                  <small id="ventTargetHelp" class="form-text text-muted">Who do you want to GFYPIF?</small>
+               </div>
+            </main>
+            <footer class="mastfoot mt-auto">
+               <div class="inner">
+                  <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+               </div>
+            </footer>
+         </div>
+      </div>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
+   </body>
 </html>
