--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <div class="container">
       <div class="row">
          <div class="d-flex h-100 p-3 mx-auto flex-column">
-            <header class=" mb-auto text-primary">
+            <header class="mb-auto text-primary">
                <h1 class="">G.F.Y.P.I.F.</h1>
             </header>
-            <main role="main" class="col-lg-6 col-offset-3">
+            <main role="main">
                <div class="form-group">
                   <label for="ventTarget">Recipient</label>
-                  <input type="text" class="form-control form-control-lg" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
+                  <input type="text" class="form-control form-control-lg col-lg-3  mx-auto flex-column" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
                   <small id="ventTargetHelp" class="form-text text-muted">Who do you want to GFYPIF?</small>
                </div>
             </main>
