--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-   <head>
+<html lang="en"><head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="">
@@ -17,7 +16,7 @@
                <h1 class="">G.F.Y.P.I.F.</h1>
             </header>
             <main role="main">
-               <div class="form-group">
+               <div class="form-group mx-auto col-4">
                   <label for="ventTarget">Recipient</label>
                   <input type="text" class="form-control form-control-lg col-lg-3  mx-auto flex-column" id="ventTarget" aria-describedby="ventTargetHelp" placeholder="Enter Name">
                   <small id="ventTargetHelp" class="form-text text-muted">Who do you want to GFYPIF?</small>
@@ -25,7 +24,7 @@
             </main>
             <footer class="mastfoot mt-auto">
                <div class="inner">
-                  <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+                  
                </div>
             </footer>
          </div>
@@ -33,5 +32,6 @@
       </div>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
-   </body>
-</html>
+   
+
+</body></html>
