--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                                 <h1 id="GFYTarget" style="display:none"></h1>
                                 <h1 id="GFYMsg" style="display:none">Go Fuck Yourself and get Punched In the Face</h1>
                         </div>
+                        <div style="bottom: 0;margin:0;padding:0;position:fixed">
+                                <div class="container">
+                                        <a href="./" class="btn btn-info">GFYPIF someone else</a>
+                                </div>
+                        </div>
                 </div>
         </div>
 
