--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <style>
                 body {
                         background-color: #222;
-                        color: #0F0
+                        color: #0F0;
+                        font-size: 3.2vw;
                 }
 
                 h1 {
-                        font-size:10em;
+                        font-size:6vw;
                 }
 
         </style>
@@ -48,7 +49,7 @@
                         <div class="mx-auto">
                                 <h1 id="Hey" style="display:none">Hey</h1>
                                 <h1 id="GFYTarget" style="display:none"></h1>
-                                <h1 id="GFYMsg" style="display:none">Go Fuck Yourself and get Punched In the Face</h1>
+                                <h1 id="GFYMsg" style="display:none">Go Fuck Yourself <br />and get<br /> Punched In the Face</h1>
                         </div>
                         <div style="bottom: 0;margin:0;padding:0;position:fixed">
                                 <div class="container">
