--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
                 }
 
         </style>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DNZ0K9JYXS"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-DNZ0K9JYXS');
+        </script>
 </head>
 <body class="text-center">
         <div class="container" id="DataEntry" style="display:none">
