--- a/Vectors.html
+++ b/Vectors.html
@@ -53,8 +53,8 @@
     var img = new Image();
 
     img.src = "spacebg.png";
-    //if (Date.now() % 20 == 0)
-      //  img.src = "https://www.gfypif.com/KNS.jpg";
+    if (Date.now() % 20 == 0)
+        img.src = "https://www.gfypif.com/KNS.jpg";
 
     var xpos = 0;
     var ypos = 0;
