--- a/Vectors.html
+++ b/Vectors.html
@@ -54,7 +54,7 @@
 
     img.src = "spacebg.png";
     if (Date.now() % 20 == 0)
-        img.src = "https://gfypif.com/sjs.png";
+        img.src = "https://gfypif.com/kimalice.jpg";
 
     var xpos = 0;
     var ypos = 0;
